Limit simulated mouse events on Google Maps to entering Street View https://bugs.webkit.org/show_bug.cgi?id=198657 <rdar://problem/51345064>

Reviewed by Brent Fulgham.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):
(WebCore::Quirks::shouldDispatchSimulatedMouseEventsOnTarget const):
* page/Quirks.h:

Canonical link: https://commits.webkit.org/212653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246205 268f45cc-cd09-0410-ab3c-d52691b4dbfc