Source/WebCore/page/Quirks.cpp
@@ -282,9 +282,9 @@ bool Quirks::shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAr
     return shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreasForHost(m_document->topDocument().url().host());
 }
 
+#if PLATFORM(IOS_FAMILY)
 bool Quirks::shouldDispatchSimulatedMouseEvents() const
 {
-#if PLATFORM(IOS_FAMILY)
     if (!needsQuirks())
         return false;
 
@@ -317,9 +317,22 @@ bool Quirks::shouldDispatchSimulatedMouseEvents() const
         return true;
     if (equalLettersIgnoringASCIICase(host, "naver.com") || host.endsWithIgnoringASCIICase(".naver.com"))
         return true;
-#endif
     return false;
 }
+
+bool Quirks::shouldDispatchSimulatedMouseEventsOnTarget(EventTarget* target) const
+{
+    if (!needsQuirks() || !shouldDispatchSimulatedMouseEvents())
+        return false;
+
+    // On Google Maps, we want to limit simulated mouse events to dragging the little man that allows entering into Street View.
+    auto& url = m_document->topDocument().url();
+    auto host = url.host();
+    if (equalLettersIgnoringASCIICase(host, "www.google.com") && url.path().startsWithIgnoringASCIICase("/maps/"))
+        return is<Element>(target) && downcast<Element>(target)->getAttribute("class") == "widget-expand-button-pegman-icon";
+    return true;
+}
+#endif
 
 bool Quirks::shouldDisablePointerEventsQuirk() const
 {
